# libreoffice-env

./: .gitignore  README.md  episode_api.py  grader.py  libreoffice_env.py  mcp_server.py  pyproject.toml  utils.py
evaluation/: __init__.py  grader.py
examples/: mcp_client.py  openai_agent.py  run_with_openai.py  run_with_openai_mcp.py  simple_mcp_usage.py  simple_usage.py
orchestration/: __init__.py  env_runner.py  episode_runner.py  sandbox_manager.py  task_manager.py
sandbox/: Dockerfile  requirements.txt
tasks/banking_reserves/: task.json
tasks/banking_reserves/initial/: cash_flows.ods
tasks/banking_reserves/oracle/: cash_flows.ods
tasks/department_summary/: task.json
tasks/department_summary/initial/: employees.ods
tasks/department_summary/oracle/: employees.ods
tasks/gui_data_entry/: task.json
tasks/gui_data_entry/initial/: inventory.ods
tasks/gui_data_entry/oracle/: inventory.ods
tasks/sales_report/: task.json
tasks/sales_report/initial/: sales.db
tasks/sales_report/oracle/: sales_report.ods
tasks/sales_totals/: task.json
tasks/sales_totals/initial/: sales.ods
tasks/sales_totals/oracle/: sales.ods
